--- a/src/index.css
+++ b/src/index.css
@@ -125,12 +125,15 @@
 
 .searchpage {
   padding: 120px 30px;
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 30px;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  flex-wrap: wrap;
 }
 
 .book-card {
+  width: 250px;
   min-height: 400px;
   border-radius: 15px;
   box-shadow: 0px 0px 10px hsl(0, 0%, 70%);
@@ -231,9 +234,9 @@
   background-color: hsl(179, 43%, 50%);
 }
 
-.loading-page {
+.loading-page{
   width: 100vw;
-  height: 100vh;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1504,7 +1507,6 @@
   max-width: 1000px;
   margin: auto;
   padding: 50px 20px;
-  padding-bottom: 100px;
   border-radius: 20px;
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.749);
 }
@@ -1792,6 +1794,20 @@
 
 }
 
+@media (width<=656px) {
+  .genre-heading,.genre-top-picks-heading,.genre-top-authors-heading,.genre-quotes-heading,.genre-did-you-know-heading{
+    font-size: 2.5rem;
+  }
+
+  .genre-discription,.genre-did-you-know{
+    font-size: 1rem;
+  }
+
+  
+
+  
+}
+
 @media (width<=650px) {
   .about-heading{
     font-size: 3rem;
@@ -1822,9 +1838,8 @@
   }
 }
 
-
 @media (width<=570px) {
-  .hero-section h1{
+  .hero-section h1,.bestsellers-section h1, .recommendation-section h1,.explore-genres-section h1, .quotes-section h1,.newsletter-section h1{
     font-size: 3rem;
   }
 
@@ -1924,14 +1939,21 @@
     height: 25px;
   }
 
+  .genre-heading,.genre-top-picks-heading,.genre-top-authors-heading,.genre-quotes-heading,.genre-did-you-know-heading{
+    font-size: 2.3rem;
+  }
+
+  .genre-discription,.genre-did-you-know{
+    font-size: 0.9rem;
+  }
+
 
 
 
 }
 
-
 @media (width<=460px) {
-  .hero-section h1{
+  .hero-section h1,.bestsellers-section h1,.recommendation-section h1,.explore-genres-section h1,.quotes-section h1,.newsletter-section h1{
     font-size: 2.8rem;
   }
 
@@ -1965,8 +1987,6 @@
     padding: 10px;
   }
 }
-
-
 
 @media (width<=430px) {
   .newsletter-input{
@@ -2050,6 +2070,14 @@
   width: 25px;
   height: 25px;
 }
+
+.genre-heading,.genre-top-picks-heading,.genre-top-authors-heading,.genre-quotes-heading,.genre-did-you-know-heading{
+    font-size: 2.1rem;
+  }
+
+  .genre-discription,.genre-did-you-know{
+    font-size: 0.8rem;
+  }
 }
 
 @media (width<=406px) {
@@ -2079,8 +2107,8 @@
   .bestsellers-content h1,
 .recommendation-content h1,
 .explore-genres-content h1,
-.quotes-content h1{
-  font-size: 3rem;
+.quotes-content h1, .newsletter-section h1{
+  font-size: 2.6rem;
 }
 
 .newsletter-input{
@@ -2097,6 +2125,22 @@
   .newsletter-content p{
     font-size: 1rem;
   }
+
+  .author-card {
+  width: 250px;
+  height: 350px;
+  }
+
+  .author-name{
+    font-size: 1rem;
+  }
+
+  .author-description{
+    font-size: 0.9rem
+  }
+
+
+
 }
 
 @media (width<=340px) {
@@ -2104,7 +2148,7 @@
     font-size: 1rem;
   }
 
-  .hero-section h1{
+  .hero-section h1,.bestsellers-section h1,.recommendation-section h1, .explore-genres-section h1,.quotes-section h1{
     font-size: 2.5rem;
   }
 
@@ -2136,6 +2180,10 @@
     width: 220px;
     font-size: 1rem;
     height: 35px;
+  }
+
+  .footer-newsletter input{
+    width: 180px;
   }
 }
 
